--- a/client/templates/browse.html
+++ b/client/templates/browse.html
@@ -1,6 +1,6 @@
 <template name="browse">
 	<section class="browse content">
 		<h2>Browse Rooms</h2>
-		<ul>{{#each room}}<li class="room">{{this}}</li>{{/each}}</ul>
+		<ul>{{#each room}}<li class="room {{isSelected this}}"><a>{{this}}</a>{{userCount this}}</li>{{/each}}</ul>
 	</section>
 </template>
