--- a/client/templates/chat.css
+++ b/client/templates/chat.css
@@ -2,6 +2,9 @@
 	background-image: url("/image/user.png");
 }
 
+
+/* -------------------------------------------------------------------------- */
+/* Messages container */
 .chat .messages h2{
 	padding: 0 36px 0 4px;
 	text-align: right;
@@ -22,6 +25,9 @@
 	overflow-y: scroll;
 }
 
+/* ---------------------------------- */
+/* Individual message */
+
 .message {
 	background: rgba(255, 255, 255, .0625);
 	border-radius: 2px;
@@ -33,6 +39,8 @@
 	padding: 0 2px;
 }
 
+/* ---------------------------------- */
+/* Message metadata */
 .meta {
 	float: left;
 	line-height: 13px;
@@ -58,12 +66,116 @@
 	text-align: right;
 }
 
-.message iframe {
+/* ---------------------------------- */
+/* Image/Video uploads & Youtube videos */
+.message iframe, .message video, .message .image {
+	background-size: 100% 100%;
 	border: none;
-	border-radius: 4px; /* 2px doesn't show up? */
+	border-radius: 2px; /* 2px doesn't show up? */
+	box-shadow: 0 0 2px black;
 	float: left;
 	height: 135px;		/* 16:9 */
 	max-width: 100%;
-	padding: 2px 0;
+	margin: 2.5px 0;
+	object-fit: fill;
+	padding: 0;
 	width: 240px;		/* 16:9 */
+}
+/* -------------------------------------------------------------------------- */
+/* Message input fields */
+
+.message-input{
+	width: calc(100% - 138px);
+}
+
+.message-submit{
+	width: 70px;
+}
+
+.message-input, .message-submit, .messages form, .upload-control{
+	float: left;
+}
+
+/* ---------------------------------- */
+/* File upload */
+
+.messages form{
+	background-color: rgba(255, 255, 255, .0625);
+	background-image: url('/image/plus.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	border-radius: 2px;
+	box-shadow: 0 0 2px black;
+	display: inline-block;
+	height: 28px;
+	margin: 8px 0 0 8px;
+	overflow: hidden;
+	width: 28px;
+}
+.messages form:focus, .messages form:hover{
+	background-color: rgba(255, 255, 255, .25);
+}
+
+.messages form *{
+	border-radius: 2px !important;
+	cursor: pointer !important;
+}
+
+.messages form, .uploadPanel, .upload-control, .chat input[type="file"], .progressInner{
+	height: 28px !important;
+	line-height: 28px;
+	width: 28px !important;
+}
+
+.uploadPanel{
+	overflow: hidden;
+}
+
+.form-control{
+	top: -28px;
+}
+
+.btn-file, .chat input[type="file"]{
+	opacity: 0;
+	z-index: 1;
+}
+.chat input[type="file"]{
+    display: block;
+	margin: 0 !important;
+	max-width: 28px;
+	padding: 0;
+}
+
+.progress-bar{
+	background-color: rgba(0, 255, 64, .5);
+}
+
+.progress-label{
+	display: none;
+}
+
+.start{
+	display: none;
+	opacity: 0;
+	position: relative;
+	top: -56px;
+}
+
+.cancel{
+	background: rgba(255, 0, 0, .25);
+	font-size: 0;
+	position: absolute;
+	z-index: 2;
+}
+
+.done{
+	animation: 3s fade-out;
+	background: lime;
+	font-size: 0;
+	opacity: 0;
+	position: absolute;
+}
+@keyframes fade-out {
+	0%	 {opacity: 1;}
+	100% {opacity: 0;}
 }
