--- a/client/templates/chat.css
+++ b/client/templates/chat.css
@@ -6,9 +6,10 @@
 /* -------------------------------------------------------------------------- */
 /* Messages container */
 .chat .messages h2{
-	padding: 0 36px 0 4px;
+	padding: 0 40px 0 4px;
 	text-align: right;
 }
+
 
 .chat .messages h2 span:first-of-type {
 	float: left;
@@ -65,10 +66,22 @@
 .meta .system, .meta .admin, .meta.username, .meta .guest {
 	text-align: right;
 }
+/* ---------------------------------- */
+/* Links*/
+.message a{
+	color: skyblue;
+	text-decoration: none;
+	text-shadow: 0 0 2px black;
+}
+.message a:focus, .message a:hover{
+	text-decoration: underline;
+}
 
 /* ---------------------------------- */
 /* Image/Video uploads & Youtube videos */
 .message iframe, .message video, .message .image {
+	background-position: center;
+	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border: none;
 	border-radius: 2px; /* 2px doesn't show up? */
@@ -80,6 +93,11 @@
 	object-fit: fill;
 	padding: 0;
 	width: 240px;		/* 16:9 */
+}
+
+.message .image{
+	background-color: black;
+	background-size: contain;
 }
 /* -------------------------------------------------------------------------- */
 /* Message input fields */
@@ -121,54 +139,54 @@
 	cursor: pointer !important;
 }
 
-.messages form, .uploadPanel, .upload-control, .chat input[type="file"], .progressInner{
+.messages form, .messages .uploadPanel, .messages .upload-control, .messages input[type="file"], .messages .progressInner{
 	height: 28px !important;
 	line-height: 28px;
 	width: 28px !important;
 }
 
-.uploadPanel{
+.messages .uploadPanel{
 	overflow: hidden;
 }
 
-.form-control{
+.messages .form-control{
 	top: -28px;
 }
 
-.btn-file, .chat input[type="file"]{
+.messages .btn-file, .messages input[type="file"]{
 	opacity: 0;
 	z-index: 1;
 }
-.chat input[type="file"]{
+.messages .chat input[type="file"]{
     display: block;
 	margin: 0 !important;
 	max-width: 28px;
 	padding: 0;
 }
 
-.progress-bar{
+.messages .progress-bar{
 	background-color: rgba(0, 255, 64, .5);
 }
 
-.progress-label{
+.messages .progress-label{
 	display: none;
 }
 
-.start{
+.messages .start{
 	display: none;
 	opacity: 0;
 	position: relative;
 	top: -56px;
 }
 
-.cancel{
+.messages .cancel{
 	background: rgba(255, 0, 0, .25);
 	font-size: 0;
 	position: absolute;
 	z-index: 2;
 }
 
-.done{
+.messages .done{
 	animation: 3s fade-out;
 	background: lime;
 	font-size: 0;
